# BallzzyArchetype

./: .gitmodules  CMakeLists.txt  generate_attachments.py
source/: PluginAudioProcessor.cpp  PluginAudioProcessor.h
source/FaustResources/: CompressorPedalengine.dsp  DelayPedalFaust.dsp  EqPedalEngine.dsp  OverdrivePedalEngine.dsp  RoomPedalEngine.dsp  ampParamStack.dsp  faust.h  faustMinimal.h  reverbPedalEngine.dsp
source/dsp/: ParameterIDs.hpp  ParameterSetup.cpp  ParameterSetup.h  Processor.cpp  Processor.h  paramsDeclaration.h
source/dsp/Bones/: CompressorPedalFaust.h  EqPedalFaust.h  FuzzPedalFaust.h  OverdrivePedalFaust.h  ReverbPedalFaust.h
source/dsp/TabsProcessor/: AmpProcessor.cpp  AmpProcessor.h  InputPedalProcessor.cpp  InputPedalProcessor.h  OutputPedalProcessor.cpp  OutputPedalProcessor.h  PostEqProcessor.cpp  PostEqProcessor.h
source/dsp/faustParameterMappers/: AmpStackMap.h  PedalCompressorMap.h  PedalDelayMap.h  PedalEqMap.h  PedalFuzzMap.h  PedalOverdriveMap.h  PedalReverbMap.h  PostEqMap.h
source/ressources/namModels/Fender/: Marshall.nam
source/service/: PresetManager.h
source/ui/: gui.cpp  gui.h  webSliderAttachments.h
ui/public/: index.html
ui/public/assets/: index-B059zzJR.js  index-C0FdljFX.js  index-CHhH5XfE.css  index-DfKxlIPw.css
ui/vue-front/frontend-guitarAmp/src/: App.vue
ui/vue-front/frontend-guitarAmp/src/components/: AboutModal.vue  AmpTab.vue  BottomSection.vue  BpmComponent.vue  CompressorModule.vue  DelayHeadComponent.vue  DelayModule.vue  EffectCard.vue  FuzzModule.vue  GenericParametersPanel.vue  InputComponent.vue  InputEffectsTab.vue  OneBandEqModule.vue  OutputComponent.vue  OverdriveModule.vue  PostEffectsTab.vue  PostEqTab.vue  PresetManagerComponent.vue  ReverbModule.vue  RotaryKnob.vue  SettingsModal.vue  TopBarComponent.vue
ui/vue-front/frontend-guitarAmp/src/composables/: useJuce.ts
